# memi-studio

./: .gitignore  LICENSE  NOTICE  README.md  index.html  memoire.policy.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: build.yml  memi-ci.yml  release.yml
.memoire/: baseline.json
docs/: CREDENTIALS.md  IOS_SWIFT.md  LICENSING_PLAN.md
scripts/: apply-license-headers.mjs  assert-no-empty-catch.mjs  assert-no-mock-ui.mjs  clean-local-tauri-artifacts.mjs  fetch-runtime-cache.test.mjs  fetch-runtime.mjs  run-workbench-context-tests.mjs  studio-e2e-surface-smoke.mjs  studio-ios-runtime-smoke.mjs  studio-live-agent-smoke.mjs  studio-live-e2e.mjs  workbench-context.test.ts
src/: App.tsx  auto-updater.ts  cost-hud.tsx  fonts.css  ia-surface.tsx  main.tsx  manager-view.tsx  mermaid-board-contract.ts  mermaid-board-surface.tsx  notification-center.ts  recording-player.tsx  scratch-gate-proof.css  slash-commands.ts  studio-api.ts  studio-primitives.tsx  studio-workbench.ts  styles.css  surface-skeletons.tsx  use-stable-callback.ts  vite-env.d.ts  workbench-components.tsx  workbench-context.ts  workbench-copy.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: harness-manifest.json
src-tauri/src/: lib.rs  main.rs  markdown_corpus.rs  studio.rs
src-tauri/tests/: markdown_corpus.rs
src/__tests__/: notification-center.test.ts  release-workflow.test.ts
src/runtime/: index.ts  (+7 more)
(+44 files in other folders)
