# SPDX-License-Identifier: FSL-1.1-ALv2
# Copyright 2026 Humyn LLC

[package]
name = "memoire-studio"
version = "1.0.3"
description = "Mémoire Studio desktop agent design shell"
authors = ["Sarvesh Chidambaram"]
edition = "2021"

[lib]
name = "memoire_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
sha2 = "0.10.9"
libc = "0.2"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"

[features]
default = []
